<resources>
    <string name="app_name">Inventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Category content in home fragment -->
    <string name="deleteCategory">Delete Category</string>
    <string name="changeCategroyTitle">Change Title</string>
    <string name="addProduct">Add Product</string>
    <!--Add product title-->
    <string name="productName">Name:</string>
    <string name="productPrice">Price:</string>
    <string name="productAmount">Quantity:</string>
    <!--Delete confirm Dialog-->
    <string name="confirmTitle">Delete  forever?</string>
    <string name="confirmYes">Delete</string>
    <string name="confirmNo">Cancel</string>
    <!--price reference fragment-->
    <string name="walmart_title">Releated Product in Walmart</string>
    <string name="buttonName">Get Product</string>
    <!--Contact fragment information-->
    <string name="contact_title">You can review our website, SMS and Tel us, or you can
         Mail us and see our location
    </string>
    <string name="contact_email">
       Send  Email
    </string>
    <string name="contact_tel">
        Call telephone
    </string>
    <string name="contact_SMS">
        Send Message
    </string>
    <string name="contact_website">
      View Website
    </string>
    <string name="contact_location">
       View Location
    </string>
    <!--
#############################################################################
Credits
-->

    <string name="credits_title">Credits</string>
    <string name="credits_header_image">Image Icon and design</string>
    <string name="credits_image_description">
        <![CDATA[
            https://www.flaticon.com/home
            <br/>
            <br/>
            https://pixabay.com/
            <br/>
            <br/>
            https://material.io/design/
            <br/>
            <br/>
        ]]>
    </string>
    <string name="credits_header_api">API SDK and Techology</string>
    <string name="credits_api_description">
         <![CDATA[

                https://developer.walmartlabs.com/io-docs
                 <br/ ><br/>
                 <br/ >
                com.github.PhilJay:MPAndroidChart:v3.1.0-alpha
                 <br/>
                 <br/>
                jp.wasabeef:picasso-transformations:2.1.0
                <br/>
                <br/>
                <b>Developer Technology</b>
                <br/ >
                <br/ >




            ]]>
    </string>
    <string name="credits_header_github">Technology</string>
    <string name="credits_github_description">
         <![CDATA[

                 <br/ ><br/>
                 <br/ >
               https://github.com/
                <br/>
                <br/>

               https://developer.android.com/
                <br/>
                <br/>
                https://stackoverflow.com/
                <br/>
                <br/>

            ]]>

    </string>
    <string-array name="unit_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>


    <string-array name="unit_values">
        <item>kg</item>
        <item>lb</item>
    </string-array>


    <string name="token">1111286187992514560-lK1pPKW68cX375aNVGbrqbm8n1VK5O</string>
    <string name="tokenSecret">6wfp5xOFzsNQ65IqIFYxXS42QExE3M7F710xYPW9xpze8</string>
    <string name="APIkey">4vm8VFCY0LiYSY0l7jRdopXW6</string>
    <string name="APIkeySecrete">c7GgJEff6V8DQ55EksQpKTCbhpumE21elgwhbFcHhhZUz4bOGK</string>



</resources>
