<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProductFragment"


    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="70dp"
        android:id="@+id/addProductImage"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take Photo"
            android:layout_gravity="bottom"
            android:id="@+id/takePhotoButton"
            />
  </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/productName"
            android:textSize="@dimen/editCategoryTextSize"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editCategoryTextSize"
                android:id="@+id/addproductNameInput"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/productPrice"
            android:textSize="@dimen/editCategoryTextSize"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/editCategoryTextSize"
            android:id="@+id/addproductPriceInput"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/productAmount"
            android:textSize="@dimen/editCategoryTextSize"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/editCategoryTextSize"
            android:id="@+id/addproductAmountInput"
            />




    </GridLayout>
    <Button
        android:id="@+id/addProductButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Add Product"
        android:layout_gravity="center"
        android:textSize="@dimen/editCategoryTextSize" />

</LinearLayout>