<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:elevation="5dp"
        android:src="@drawable/ic_close_black_24dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/colorDialogChoice"
        app:cardCornerRadius="15dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:columnCount="2">

            <ImageView
                android:layout_width="@dimen/dialogImageSize"
                android:layout_height="@dimen/dialogImageSize"
                android:layout_marginRight="10dp"

                android:padding="5dp"
                android:src="@drawable/ic_update_white_24dp" />


            <TextView
                android:id="@+id/changeCategoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/changeCategroyTitle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/editCategoryTextSize"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_columnSpan="2"
                android:overScrollMode="always"
                android:scaleType="fitXY"
                android:src="@drawable/lineseperator" />

            <ImageView
                android:layout_width="@dimen/dialogImageSize"
                android:layout_height="@dimen/dialogImageSize"
                android:layout_marginRight="10dp"

                android:padding="5dp"
                android:src="@drawable/ic_delete_white_24dp" />

            <TextView
                android:id="@+id/deleteCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@android:color/white"
                android:padding="5dp"

                android:text="@string/deleteCategory"
                android:textColor="@android:color/white"
                android:textSize="@dimen/editCategoryTextSize"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_columnSpan="2"
                android:overScrollMode="always"
                android:scaleType="fitXY"
                android:src="@drawable/lineseperator" />
            <ImageView
                android:layout_width="@dimen/dialogImageSize"
                android:layout_height="@dimen/dialogImageSize"
                android:layout_marginRight="10dp"

                android:padding="5dp"
                android:src="@drawable/ic_add_circle_outline_black_24dp" />

            <TextView
                android:id="@+id/addProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/addProduct"
                android:textColor="@android:color/white"
                android:textSize="@dimen/editCategoryTextSize"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_columnSpan="2"
                android:overScrollMode="always"
                android:scaleType="fitXY"
                android:src="@drawable/lineseperator" />

        </GridLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>